--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -46,4 +46,15 @@
     <color name="filter_item_checked">#ff4f97f8</color>
     <color name="global_text_color">#ff444444</color>
     <color name="global_line">#ffe5e5e5</color>
+    
+    
+        <color name="content_bg">#3c3c3c</color>
+    <color name="content_down">#33b5e5</color>
+    <color name="title_bg">#222222</color>
+    <color name="default_text_color">#efff</color>
+    <color name="gray_text_color">#eccc</color>
+    <color name="black_color">#000</color>
+    <color name="white_color">#fff</color>
+    <color name="dark_blue_color">#b1bcca</color>
+    <color name="dark_red_color">#793939</color>
 </resources>
