--- a/res/layout/page_iweather.xml
+++ b/res/layout/page_iweather.xml
@@ -97,7 +97,7 @@
         android:layout_weight="2"
         android:background="@color/content_bg" >
 
-        <com.buddy.widget.SmoothPagedView
+<!--         <com.buddy.widget.SmoothPagedView
             android:id="@+id/mScrollLayout"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
@@ -105,7 +105,7 @@
             android:fadingEdge="none"
             android:fadingEdgeLength="0dip"
             android:scrollbarSize="0dip"
-            android:scrollbars="vertical" />
+            android:scrollbars="vertical" /> -->
 
         <ImageView
             android:layout_width="fill_parent"
