--- a/res/layout/page_iweather.xml
+++ b/res/layout/page_iweather.xml
@@ -106,6 +106,16 @@
             android:fadingEdgeLength="0dip"
             android:scrollbarSize="0dip"
             android:scrollbars="vertical" /> -->
+            
+            <android.support.v4.view.ViewPager
+                 android:id="@+id/mScrollLayout"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:fadeScrollbars="false"
+            android:fadingEdge="none"
+            android:fadingEdgeLength="0dip"
+            android:scrollbarSize="0dip"
+            android:scrollbars="vertical" />
 
         <ImageView
             android:layout_width="fill_parent"
