--- a/res/layout/middle_main_page.xml
+++ b/res/layout/middle_main_page.xml
@@ -4,7 +4,7 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
-    <LinearLayout
+  <!--   <LinearLayout
         android:id="@+id/linearLayout1"
         android:layout_width="fill_parent"
         android:layout_height="40dp"
@@ -89,7 +89,7 @@
             android:paddingTop="5dp"
             android:src="@drawable/ic_menu_more" />
     </LinearLayout>
-
+ -->
     <FrameLayout
         android:id="@+id/frameLayout1"
         android:layout_width="fill_parent"
