--- a/res/layout/middle_main_page.xml
+++ b/res/layout/middle_main_page.xml
@@ -107,7 +107,7 @@
             android:scrollbarSize="0dip"
             android:scrollbars="vertical" /> -->
             
-            <android.support.v4.view.ViewPager
+ <!--            <android.support.v4.view.ViewPager
                  android:id="@+id/mScrollLayout"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
@@ -115,7 +115,7 @@
             android:fadingEdge="none"
             android:fadingEdgeLength="0dip"
             android:scrollbarSize="0dip"
-            android:scrollbars="vertical" />
+            android:scrollbars="vertical" /> -->
 
         <ImageView
             android:layout_width="fill_parent"
